--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: "It's new $module"
+abstract: 'a web application framework'
 author:
   - 'Masayuki Matsuki <y.songmu@gmail.com>'
 build_requires:
@@ -27,7 +27,7 @@ no_index:
 provides:
   Puncheur:
     file: lib/Puncheur.pm
-    version: v0.0.1
+    version: v0.0.2
   Puncheur::Dispatcher::Lite:
     file: lib/Puncheur/Dispatcher/Lite.pm
     version: 0
@@ -61,9 +61,18 @@ provides:
   Puncheur::Trigger:
     file: lib/Puncheur/Trigger.pm
     version: 0
+recommends:
+  Data::Section::Simple: 0
+  File::ShareDir: 0
+  JSON: 0
+  MIME::Base64: 0
+  Router::Simple: 0.14
+  Router::Simple::Sinatraish: 0
 requires:
+  Clone: 0
   Config::PL: 0
   Plack: 0
+  Plack::Middleware::Session: 0
   Tiffany: 0
   URI::QueryParam: 0
   URL::Encode: 0
@@ -72,4 +81,4 @@ resources:
   bugtracker: https://github.com/Songmu/Puncheur/issues
   homepage: https://github.com/Songmu/Puncheur
   repository: git://github.com/Songmu/Puncheur.git
-version: 0.0.1
+version: 0.0.2
