--- a/META.yml
+++ b/META.yml
@@ -27,7 +27,7 @@ no_index:
 provides:
   Puncheur:
     file: lib/Puncheur.pm
-    version: v0.0.2
+    version: v0.0.3
   Puncheur::Dispatcher::Lite:
     file: lib/Puncheur/Dispatcher/Lite.pm
     version: 0
@@ -68,9 +68,12 @@ recommends:
   MIME::Base64: 0
   Router::Simple: 0.14
   Router::Simple::Sinatraish: 0
+  Text::Xslate: 0
+  URL::Encode::XS: 0
 requires:
   Clone: 0
   Config::PL: 0
+  Hash::MultiValue: 0
   Plack: 0
   Plack::Middleware::Session: 0
   Tiffany: 0
@@ -81,4 +84,4 @@ resources:
   bugtracker: https://github.com/Songmu/Puncheur/issues
   homepage: https://github.com/Songmu/Puncheur
   repository: git://github.com/Songmu/Puncheur.git
-version: 0.0.2
+version: 0.0.3
