--- a/META.yml
+++ b/META.yml
@@ -28,7 +28,7 @@ no_index:
 provides:
   Puncheur:
     file: lib/Puncheur.pm
-    version: v0.1.0
+    version: v0.1.1
   Puncheur::Dispatcher::Lite:
     file: lib/Puncheur/Dispatcher/Lite.pm
   Puncheur::Dispatcher::PHPish:
@@ -52,7 +52,6 @@ provides:
   Puncheur::Trigger:
     file: lib/Puncheur/Trigger.pm
 recommends:
-  Data::Section::Simple: '0'
   File::ShareDir: '0'
   JSON: '0'
   MIME::Base64: '0'
@@ -62,15 +61,17 @@ recommends:
 requires:
   Clone: '0'
   Config::PL: '0'
+  Data::Section::Simple: '0'
   Hash::MultiValue: '0'
   Plack: '0'
   Plack::Middleware::Session: '0'
   Plack::Request::WithEncoding: '0'
   Tiffany: '0'
   URI::QueryParam: '0'
+  URL::Encode: '0'
   perl: '5.010'
 resources:
   bugtracker: https://github.com/Songmu/Puncheur/issues
   homepage: https://github.com/Songmu/Puncheur
   repository: git://github.com/Songmu/Puncheur.git
-version: 0.1.0
+version: 0.1.1
