--- a/META.yml
+++ b/META.yml
@@ -28,7 +28,7 @@ no_index:
 provides:
   Puncheur:
     file: lib/Puncheur.pm
-    version: v0.1.1
+    version: v0.1.2
   Puncheur::Dispatcher::Lite:
     file: lib/Puncheur/Dispatcher/Lite.pm
   Puncheur::Dispatcher::PHPish:
@@ -53,19 +53,19 @@ provides:
     file: lib/Puncheur/Trigger.pm
 recommends:
   File::ShareDir: '0'
-  JSON: '0'
   MIME::Base64: '0'
-  Router::Boom::Method: '0'
-  Text::Xslate: '0'
   URL::Encode::XS: '0'
 requires:
   Clone: '0'
   Config::PL: '0'
   Data::Section::Simple: '0'
   Hash::MultiValue: '0'
+  JSON: '0'
   Plack: '0'
   Plack::Middleware::Session: '0'
   Plack::Request::WithEncoding: '0'
+  Router::Boom: '1.00'
+  Text::Xslate: '0'
   Tiffany: '0'
   URI::QueryParam: '0'
   URL::Encode: '0'
@@ -74,4 +74,4 @@ resources:
   bugtracker: https://github.com/Songmu/Puncheur/issues
   homepage: https://github.com/Songmu/Puncheur
   repository: git://github.com/Songmu/Puncheur.git
-version: 0.1.1
+version: 0.1.2
